[gd_scene load_steps=4 format=3 uid="uid://du4uk7vhepj7j"]

[ext_resource type="Theme" uid="uid://di1ynnspp1355" path="res://assets/themes/theme_menu.tres" id="1_37pjl"]
[ext_resource type="Script" uid="uid://drtqbr5umq12t" path="res://ui/menu/main_menu.gd" id="2_or6mk"]
[ext_resource type="Script" uid="uid://5vs43gwj23we" path="res://ui/menu/menu_utils.gd" id="3_gvx18"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_37pjl")
script = ExtResource("2_or6mk")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -197.0
offset_top = 41.0
offset_right = 200.0
offset_bottom = 148.0
grow_horizontal = 2
text = "Bounce Them All"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -349.0
offset_top = -104.0
offset_right = 349.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="ButtonGameStart" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Game Start"

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Options
"

[node name="ButtonEnd" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "End
"

[node name="MenuUtils" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_gvx18")

[connection signal="mouse_entered" from="VBoxContainer/ButtonGameStart" to="." method="_on_button_game_start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ButtonGameStart" to="." method="_on_button_game_start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/ButtonOptions" to="." method="_on_button_options_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/ButtonEnd" to="." method="_on_button_end_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ButtonEnd" to="." method="_on_button_end_pressed"]
